# pomodoro-cat-tauri

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_EN.md  package-lock.json  package.json  pet.html  vite.config.ts
.github/workflows/: build.yml
docs/superpowers/plans/: 2025-05-27-menubar-timer-display-fix.md  2026-06-01-desktop-pet.md  2026-06-01-settings-enhancement.md  2026-06-01-weekly-monthly-report.md  2026-06-03-task-time-estimation.md  2026-06-04-task-completion-redesign.md
docs/superpowers/specs/: 2025-05-27-menubar-timer-display-design.md  2026-06-01-desktop-pet-design.md  2026-06-03-task-time-estimation-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: AboutSection.tsx  ChangelogModal.tsx  GlobalTimer.tsx
src/components/stats/: ReportTab.tsx
src/lib/: releases.ts  sound.ts
src/lib/db/: index.ts  schema.ts
src/lib/utils/: catWeight.test.ts  catWeight.ts  format.ts
src/pages/: Cat.tsx  Settings.tsx  Stats.tsx  Tasks.tsx  Timer.tsx
src/pet/: PetWindow.tsx  main.tsx  styles.css
src/pet/components/: CatBreak.tsx  CatIdle.tsx  CatPaused.tsx  CatRunning.tsx  CodexCat.tsx
src/stores/: taskStore.ts  testModeStore.ts  timerStore.test.ts  timerStore.ts  userStore.test.ts  userStore.ts
src/styles/: codex-cat-animations.css
src/test/: setup.self.test.ts  setup.ts
src/types/: index.ts
visual-check/: fixtures.ts  run.ts  scenarios.ts
