[package]
name = "pomodorocat"
version = "0.1.0"
description = "番茄专注猫 - 一款可爱的番茄钟应用"
authors = ["you"]
edition = "2021"

[lib]
name = "pomodorocat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
